--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    HOME PAGE
+    <h1>HOME PAGE</h1>
+    <div class="buttons">
+      <a href="/facemesh"><button>facemesh</button></a>
+      <a href="/handpose"><button>handpose</button></a>
+      <a href="/posenet"><button>posenet</button></a>
+    </div>
   </body>
 </html>
