--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>NEURAL HUB</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>HOME PAGE</h1>
+    <h1>NEURAL HUB</h1>
     <div class="buttons">
-      <a href="/facemesh"><button>facemesh</button></a>
-      <a href="/handpose"><button>handpose</button></a>
-      <a href="/posenet"><button>posenet</button></a>
+      <a href="/facemesh-classification"
+        ><button>facemesh-classification</button></a
+      >
+      <a href="/handpose-classification"
+        ><button>handpose-classification</button></a
+      >
+      <a href="/posenet-classification"
+        ><button>posenet-classification</button></a
+      >
+    </div>
+    <div class="buttons">
+      <a href="/facemesh-regression"><button>facemesh-regression</button></a>
+      <a href="/handpose-regression"><button>handpose-regression</button></a>
+      <a href="/posenet-regression"><button>posenet-regression</button></a>
     </div>
   </body>
 </html>
